# PlottyN

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  datasource.cpp  datasource.h  glyphs.cpp  glyphs.h  imageplot.cpp  imageplot.h  linesegmentplot.cpp  linesegmentplot.h  main.cpp  plot.cpp  plot.h  plotty.cpp  plotty.h  plottyrootcallbacks.cpp  plottyrootcallbacks.h  pointplot.cpp  pointplot.h  scattercore.cpp  scattercore.h  simpletable.cpp  simpletable.h  tableplot.cpp  tableplot.h  utility.cpp  utility.h
